# backend

./: .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: cicd.yml
app/: main.py
