[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Hojoong Jang",email = "hojoong310@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "benzinga (>=1.21,<2.0)",
    "yfinance (>=0.2.61,<0.3.0)",
    "datetime (>=5.5,<6.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "ta (>=0.11.0,<0.12.0)",
    "scipy (>=1.15.3,<2.0.0)",
    "numpy (>=2.2.6,<3.0.0)",
    "arch (>=7.2.0,<8.0.0)",
    "fastquant (>=0.1.8.1,<0.2.0.0)",
    "keras (>=3.10.0,<4.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn[standard] (>=0.34.3,<0.35.0)",
    "xgboost (>=3.0.2,<4.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "websocket-client (>=1.8.0,<2.0.0)",
    "simplejson (>=3.20.1,<4.0.0)",
    "redis (>=6.2.0,<7.0.0)",
    "redis[hiredis] (>=6.2.0,<7.0.0)",
    "asyncio (>=3.4.3,<4.0.0)",
    "aiohttp (>=3.12.7,<4.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "httpx[http2] (>=0.28.1,<0.29.0)",
    "prophet (>=1.1.7,<2.0.0)",
    "schedule (>=1.2.2,<2.0.0)",
    "pocketbase (>=0.15.0,<0.16.0)",
    "quantstats (>=0.0.64,<0.0.65)",
    "ipython (>=9.3.0,<10.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "backtesting (>=0.6.4,<0.7.0)",
    "ujson (>=5.10.0,<6.0.0)",
    "faker (>=37.3.0,<38.0.0)",
    "finnhub-python (>=2.4.23,<3.0.0)",
    "intrinio-sdk (>=6.38.0,<7.0.0)",
    "openai (>=1.84.0,<2.0.0)",
    "slowapi (>=0.1.9,<0.2.0)",
    "praw (>=7.8.1,<8.0.0)",
    "fuzzywuzzy (>=0.18.0,<0.19.0)",
    "python-levenshtein (>=0.27.1,<0.28.0)",
    "plotly (==5.23.0)",
    "kaleido (==0.2.1)",
    "atproto (>=0.0.61,<0.0.62)",
    "orjson (>=3.10.18,<4.0.0)",
    "aiofiles (>=24.1.0,<25.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
